# ai-artemis

./: .dockerignore  .gitignore  CLAUDE.md  CLUSTER.md  CLUSTER_MANAGER_TESTS_SUMMARY.md  CLUSTER_NODE_TESTS_SUMMARY.md  Cargo.toml  DAO_TESTS_SUMMARY.md  DISCOVERY_FILTER_TESTS_SUMMARY.md  Dockerfile  FINAL_TEST_SUMMARY_2026-02-16.md  LEASE_MANAGER_TESTS_SUMMARY.md  PROJECT_COMPLETION.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REPLICATION_WORKER_TESTS_SUMMARY.md  STATUS_SERVICE_TESTS_SUMMARY.md  TEST_FIX_SUMMARY.md  TEST_STATUS.md  TEST_UPDATE_SUMMARY.md  artemis-sqlite.toml  cluster.sh  package-lock.json  run-tests.sh  rust-toolchain.toml  test-cluster-api.sh  test-group-routing.sh  test-instance-management.sh  test-management-README.md  test-management.sh  test-persistence.sh
.github/: dependabot.yml  pull_request_template.md
artemis/: Cargo.toml
artemis-client/: Cargo.toml  README.md
artemis-client/examples/: enterprise_client.rs  websocket_client.rs
artemis-client/src/: address.rs  config.rs  discovery.rs  error.rs  filter.rs  http.rs  lib.rs  metrics.rs  registry.rs  retry.rs
artemis-client/src/websocket/: client.rs  mod.rs
artemis-client/tests/: enterprise_features.rs
artemis-common/: Cargo.toml
artemis-console/: .env.development  .env.production  PROJECT_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
artemis-core/: Cargo.toml
artemis-core/src/: config.rs  error.rs  lib.rs
artemis-core/src/model/: canary.rs  change.rs  group.rs  lease.rs  management.rs  mod.rs  replication.rs  request.rs  route.rs  service.rs  status.rs  zone.rs
artemis-core/src/telemetry/: mod.rs
artemis-core/src/traits/: discovery.rs  registry.rs
artemis-management/: Cargo.toml
artemis-management/migrations/: 001_initial_schema.sql  002_auth_schema.sql  003_add_user_description.sql
artemis-management/src/: api.rs  audit.rs  canary.rs  dao.rs  discovery_filter.rs  group.rs  instance.rs  lib.rs  loader.rs  route.rs  zone.rs
artemis-management/src/auth/: manager.rs  mod.rs  model.rs
artemis-management/src/auth/dao/: mod.rs  session_dao.rs  user_dao.rs
artemis-management/src/dao/: canary_dao.rs  group_dao.rs  group_instance_dao.rs  mod.rs  route_dao.rs  zone_dao.rs
artemis-management/src/db/: mod.rs
artemis-management/src/model/: canary.rs  group.rs  management.rs  mod.rs  route.rs  zone.rs
artemis-management/src/routing/: context.rs  engine.rs  strategy.rs
artemis-management/src/web/: mod.rs  routes.rs  state.rs
artemis-management/src/web/api/: audit.rs  auth.rs  canary.rs  instance.rs  mod.rs  zone.rs
artemis-management/src/web/middleware/: jwt.rs  mod.rs
artemis-management/tests/: auth_test.rs
artemis-management/tests/common/: mod.rs
artemis-server/: Cargo.toml
artemis-server/benches/: performance.rs
artemis-server/src/: config.rs  lib.rs  server.rs  state.rs  status.rs  storage.rs
artemis-server/src/api/: discovery.rs  metrics.rs  mod.rs  registry.rs  replication.rs  routing.rs  status.rs
artemis-server/src/cache/: mod.rs  versioned.rs
artemis-server/src/change/: manager.rs  mod.rs
artemis-server/src/cluster/: manager.rs  node.rs
artemis-server/src/discovery/: filter.rs  load_balancer.rs  mod.rs  service_impl.rs
artemis-server/src/lease/: manager.rs
artemis-server/src/model/: lease.rs  mod.rs  status.rs
artemis-server/src/ratelimiter/: limiter.rs
artemis-server/src/registry/: mod.rs  repository.rs  service_impl.rs
artemis-server/src/replication/: client.rs  error.rs  manager.rs  mod.rs  worker.rs
artemis-server/src/routing/: context.rs  engine.rs  mod.rs  strategy.rs
artemis-server/src/status/: mod.rs  service_impl.rs
artemis-server/src/telemetry/: mod.rs
artemis-server/src/traits/: discovery.rs  mod.rs  registry.rs
artemis-server/src/websocket/: handler.rs  mod.rs  session.rs
artemis-server/tests/: integration_tests.rs  test_cache_manager.rs  test_change_manager.rs  test_cluster_manager.rs  test_discovery_api.rs  test_discovery_filter.rs  test_discovery_service.rs  test_lease_manager.rs  test_management_api.rs  test_registry_api.rs  test_registry_service.rs  test_replication_api.rs  test_status_api.rs  test_status_service.rs
artemis-service/: Cargo.toml
artemis-test/: .gitignore  DESIGN.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md
artemis-test/apps/rust-consumer/: Cargo.toml
artemis-test/apps/rust-consumer/src/: main.rs
artemis-test/apps/rust-provider/: Cargo.toml
artemis-test/apps/rust-provider/src/: main.rs
artemis-web/: Cargo.toml
artemis-web/src/: lib.rs  middleware.rs  server.rs  state.rs
artemis-web/src/api/: audit.rs  auth.rs  canary.rs  discovery.rs  management.rs  metrics.rs  mod.rs  registry.rs  replication.rs  routing.rs  status.rs  zone.rs
artemis-web/src/middleware/: jwt.rs  mod.rs
artemis-web/src/websocket/: handler.rs  session.rs
artemis-web/tests/: test_discovery_api.rs  test_management_api.rs  test_registry_api.rs  test_replication_api.rs  test_status_api.rs
artemis/src/: main.rs
artemis/tests/: integration_tests.rs
artemis/tests/common/: mod.rs
config/: production-cluster-node1.toml  production-cluster-node3.toml
docs/: COMPLETE_IMPLEMENTATION_SUMMARY.md  DATABASE.md  DOCUMENTATION_UPDATE_2026-02-14.md  FINAL_SUMMARY.md  GROUP_ROUTING_AND_INSTANCE_MANAGEMENT_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTANCE_MANAGEMENT_COMPLETE.md  PERFORMANCE_REPORT.md  PHASE_13_COMPLETION_REPORT.md  PHASE_9_12_SUMMARY.md  README.md  TEST_STRATEGY.md  artemis-rust-rewrite-specification.md  cluster-quick-reference.md  database-configuration-guide.md  deployment.md  development.md  implementation-progress.md  performance-optimization.md
rules/: doc.md
scripts/: CLUSTER.md  README.md  cluster-quick-reference.md  cluster.sh  dev.sh  run-tests.sh  test-all-operations.sh  test-audit-logs.sh  test-auth-api.sh  test-batch-replication.sh  test-cluster-api.sh  test-discovery-lookup.sh  (+10 more)
tools/stress-test/: Cargo.toml  README.md  run-stress-test.sh
tools/stress-test/src/: main.rs
(+261 files in other folders)
