[workspace]
members = [
    "artemis-core",
    "artemis-server",
    "artemis-web",
    "artemis-management",
    "artemis-client",
    "artemis",
    "tools/stress-test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Artemis Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Web框架
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-full",
] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 并发数据结构
dashmap = "6.1"
parking_lot = "0.12"

# HTTP客户端
reqwest = { version = "0.13", features = ["json"] }

# WebSocket
tokio-tungstenite = "0.28.0"

# 数据库 - SeaORM (原生支持运行时多数据库切换)
sea-orm = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-mysql",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = { version = "1.1" }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 限流
governor = "0.10"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.28", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.28", features = ["metrics", "trace", "tonic"] }
tracing-opentelemetry = "0.29"

# 配置
config = "0.15"
figment = { version = "0.10", features = ["toml", "env"] }

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.21", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# 异步trait
async-trait = "0.1"

# 其他工具
bytes = "1.8"
futures = "0.3"
hostname = "0.4"

# 人性化时间处理
humantime-serde = "1.1"

# 监控和指标
prometheus = "0.13"
lazy_static = "1.5"

# 配置解析
toml = "0.9"

# 性能测试
criterion = { version = "0.8", features = ["async_tokio"] }

# 随机数生成
rand = "0.8"
