[package]
name = "artemis-client"
version.workspace = true
edition.workspace = true
description = "Artemis Service Registry Client SDK"
license.workspace = true

[dependencies]
artemis-core = { path = "../artemis-core" }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

[features]
default = []
metrics = ["prometheus", "lazy_static"]

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
