[package]
name = "artemis-management"
version.workspace = true
edition.workspace = true

[dependencies]
artemis-core = { path = "../artemis-core" }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
