[package]
name = "artemis-web"
version.workspace = true
edition.workspace = true

[dependencies]
artemis-core = { path = "../artemis-core" }
artemis-server = { path = "../artemis-server" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
