[package]
name = "artemis"
version.workspace = true
edition.workspace = true
description = "Artemis Service Registry - CLI and Server"

[[bin]]
name = "artemis"
path = "src/main.rs"

[dependencies]
artemis-core = { path = "../artemis-core" }
artemis-server = { path = "../artemis-server" }
artemis-web = { path = "../artemis-web" }
artemis-management = { path = "../artemis-management" }
clap = { workspace = true }
tokio = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
