[package]
name = "artemis"
version.workspace = true
edition.workspace = true
description = "Artemis Service Registry - CLI and Server"

[[bin]]
name = "artemis"
path = "src/main.rs"

[dependencies]
artemis-core = { path = "../artemis-core" }
artemis-server = { path = "../artemis-server" }
artemis-web = { path = "../artemis-web" }
artemis-management = { path = "../artemis-management" }
clap = { workspace = true }
tokio = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# 全局内存分配器 (适合长时间运行的服务器)
mimalloc = { workspace = true, default-features = false }

[dev-dependencies]
artemis-client = { path = "../artemis-client" }
