[package]
name = "artemis-stress-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tokio-metrics = "0.3"
hdrhistogram = "7.5"
chrono = "0.4"

# 引用本地 artemis-core 以获取模型定义
artemis-core = { path = "../../artemis-core" }
