[package]
name = "artemis-stress-test"
version.workspace = true
edition.workspace = true

[dependencies]
artemis-core = { path = "../../artemis-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
indicatif = { workspace = true }
tokio-metrics = { workspace = true }
hdrhistogram = { workspace = true }
