[package]
name = "rust-consumer"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }

# Artemis client
artemis-client = { path = "../../../artemis-client" }
artemis-common = { path = "../../../artemis-common" }
