[package]
name = "rust-provider"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Artemis client
artemis-client = { path = "../../../artemis-client" }
artemis-common = { path = "../../../artemis-common" }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }
